--- a/aboutme.html
+++ b/aboutme.html
@@ -9,11 +9,9 @@
                      <tr>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</tr>
                      <tr><a href="aboutme.html" style="text-decoration: none;"> About Me</a></tr>
                      <tr>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</tr>
-                     <tr><a href="https://en.wikipedia.org/wiki/Aluva" style="text-decoration: none;">  My City</a></tr>
+                     <tr><a href="https://en.wikipedia.org/wiki/Perumbavoor" style="text-decoration: none;">  My City</a></tr>
                      <tr>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</tr>
-                     <tr><a href="do.html" style="text-decoration: none;">  What I Do</a></tr>
-                     <tr>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</tr>
-                     <tr><a href="https://www.linkedin.com/in/abdul-rauf-p-n-755313161" style="text-decoration: none;">  Contact</a></tr>
+                    
                  </th>
              </table></center>
         </th>
