--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <html>
     <head><title>sample</title></head>
-    <body background="image\4.jpg">
+    <body background="index.jpeg">
         <br><br><br><br><br>
         <font color="white" size="5" >
             <center> <table align="center">
