--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head><title>System2Clouds</title></head>
-    <body background="image\4.jpg">
+    <body background="index.jpeg">
         <br><br><br><br><br>
         <font color="white" size="5" >
        <center> <table align="center">
