--- a/index.html
+++ b/index.html
@@ -1,31 +1,18 @@
 <!DOCTYPE html>
+ 
 <html>
-    <head><title>System2Clouds</title></head>
-    <body background="index.jpeg">
-        <br><br><br><br><br>
-        <font color="white" size="5" >
-       <center> <table align="center">
-            <th>
-                <tr><a href="index.html" style="text-decoration: none;"> Home</a></tr>
-                <tr>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</tr>
-                <tr><a href="aboutme.html" style="text-decoration: none;"> About Me</a></tr>
-                <tr>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</tr>
-                <tr><a href="https://en.wikipedia.org/wiki/Aluva" style="text-decoration: none;">  My City</a></tr>
-                <tr>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</tr>
-                <tr><a href="do.html" style="text-decoration: none;">  What I Do</a></tr>
-                <tr>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</tr>
-                <tr><a href="https://www.linkedin.com/in/salma-beevi-ka-41480620a/" style="text-decoration: none;">  Contact</a></tr>
-            </th>
-        </table></center>
-        <br><br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-       
-        <br><br><br>
-        <font color="white" size="150">
-        <p>
-            &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Learn About Me <br>
-            &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Learn About My City <br>
-            &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Learn What I Do <br>
-            &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Contact Me <br>
-        </p>
-        </font>
+    <head>
+        <title>
+            First Web Page
+        </title>
+    </head>
+ 
+    <body>
+        <h1>Hello World!</h1>
+        <h2>Hello World!</h2>
+        <h3>Hello World!</h3>
+        <h4>Hello World!</h4>
+        <h5>Hello World!</h5>
+        <h6>Hello World!</h6>
     </body>
+</html>
