--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head><title>System2Clouds</title></head>
-    <body background="4.jpeg">
+    <body background="4.jpg">
         <br><br><br><br><br>
         <font color="white" size="5" >
        <center> <table align="center">
